--- a/portfolio2024/src/app/components/home/home.component.html
+++ b/portfolio2024/src/app/components/home/home.component.html
@@ -31,7 +31,7 @@
     </blockquote>
     <div class="cta">
       <a href="#portfolio" class="btn">Ver Portafolio</a>
-      <a href="assets/CV_Kevin.pdf" class="btn-outline">Descargar CV</a>
+      <a href="assets/CVKevinPizarro2024.pdf" target="_blank" class="btn-outline">Descargar CV</a>
     </div>
   </div>
 </section>
