--- a/portfolio2024/src/app/components/about/about.component.html
+++ b/portfolio2024/src/app/components/about/about.component.html
@@ -53,7 +53,7 @@
 
   <div class="social-links">
     <a href="https://www.linkedin.com/in/kevin-pizarro" title="Linkedin Kevin Pizarro" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
-      <i class="bx bxl-linkedin"></i>
+      <i class='bx bxl-linkedin'></i>
     </a>
     <a href="https://github.com/KPBaldur" title="GitHub Kevin Pizarro" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
       <i class="bx bxl-github"></i>
