--- a/portfolio2024/src/app/components/about/about.component.html
+++ b/portfolio2024/src/app/components/about/about.component.html
@@ -1,7 +1,7 @@
 <section id="about" class="about-me">
   <h2>Sobre mí</h2>
   <h3>Desarrollador Fullstack | Unreal Engine 5 Specialist | Modelado 3D</h3>
-  <img src="" alt="">
+  <img src="../../../assets/img/KevinPizarro.jpg" alt="Kevin Pizarro">
   <p>
     Ingeniero en Informática con experiencia en desarrollo web, software empresarial y creación de experiencias interactivas en 
     <strong>Unreal Engine 5</strong>. Mi enfoque está en soluciones creativas, escalables y optimizadas para la experiencia de usuario, 
