--- a/portfolio2024/src/app/components/about/about.component.html
+++ b/portfolio2024/src/app/components/about/about.component.html
@@ -62,7 +62,7 @@
       <i class='bx bxl-behance'></i>
     </a>
     <a href="https://www.artstation.com/onexoot" title="ArtStation Kevin Pizarro" target="_blank" rel="noopener noreferrer" aria-label="ArtStation">
-      <img src="../../../assets/icon/artstation.svg" alt="ArtStation" class="custom-icon"/>
+      <i class='bx bxs-paint' ></i>
     </a>
   </div>
 </section>
