--- a/Portfolio2024/src/app/app.component.html
+++ b/Portfolio2024/src/app/app.component.html
@@ -4,4 +4,5 @@
 <app-portfolio></app-portfolio>
 <app-skills></app-skills>
 <app-contact></app-contact>
+<app-footer></app-footer>
 <router-outlet></router-outlet>
