--- a/portfolio2024/src/app/components/footer/footer.component.html
+++ b/portfolio2024/src/app/components/footer/footer.component.html
@@ -49,7 +49,7 @@
       <div class="footer-acknowledgments">
         <button class="acknowledgments-btn" (click)="openAcknowledgments()">
           <i class="bx bx-heart"></i>
-          Agradecimientos a
+          Agradecimientos
         </button>
       </div>
     </div>
@@ -66,31 +66,70 @@
       </div>
       <div class="modal-body">
         <div class="acknowledgment-item">
-          <i class="bx bxl-angular"></i>
-          <div>
-            <h4>Angular Team</h4>
-            <p>Por el increíble framework que hace posible esta aplicación</p>
+          <div class="acknowledgment-image">
+            <img src="../../../assets/img/SebastianContreras.jpg" alt="Sebastian Contreras">
+          </div>
+          <div class="acknowledgment-content">
+            <h4>Profesor Sebastian Contreras</h4>
+            <p>Por su ayuda y asesoramiento en mi carrera profesional, sus consejos me sirvieron para poder mejorar mis habilidades y conocimientos en el campo de la programación.
+              Y no solo por eso, sino por su dedicación y tiempo para enseñarme que la edad solo es un número.
+            </p>
           </div>
         </div>
+
         <div class="acknowledgment-item">
-          <i class="bx bx-palette"></i>
-          <div>
-            <h4>Boxicons</h4>
-            <p>Por la hermosa colección de iconos utilizados en todo el sitio</p>
+          <div class="acknowledgment-image">
+            <img src="../../../assets/img/PatricioPalma.jpg" alt="Patricio Palma">
+          </div>
+          <div class="acknowledgment-content">
+            <h4>Profesor Patricio Palma</h4>
+            <p>Sus enseñanzas y consejos me ayudaron a poder ver una perspectiva mucho mas profunda dentro de mi perfil profesional.</p>
           </div>
         </div>
+
         <div class="acknowledgment-item">
-          <i class="bx bx-code-alt"></i>
-          <div>
-            <h4>Comunidad de Desarrolladores</h4>
-            <p>Por el apoyo constante y el intercambio de conocimientos</p>
+          <div class="acknowledgment-image">
+            <img src="../../../assets/img/FelipeRobinet.jpg" alt="Felipe Robinet">
+          </div>
+          <div class="acknowledgment-content">
+            <h4>Profesor Felipe Robinet</h4>
+            <p>Gracias por incentivarnos a seguir adelante y por alentar nuestra hambre de aprendizaje, que no importa cuanto tiempo tome,
+            lo importante es el resultado y sentirnos satisfechos por lo que hemos aprendido.
+            </p>
           </div>
         </div>
+
         <div class="acknowledgment-item">
-          <i class="bx bx-heart"></i>
-          <div>
-            <h4>Familia y Amigos</h4>
-            <p>Por su apoyo incondicional en este viaje profesional</p>
+          <div class="acknowledgment-image">
+            <img src="../../../assets/img/AlejandroTaboada.jpg" alt="Alejandro Taboada">
+          </div>
+          <div class="acknowledgment-content">
+            <h4>Alejandro Taboada -Programacion ATS</h4>
+            <p>Me enseñaste que no importa que tan loco o imposible sea, se puede programar de todas formas. Siempre mostrando la pasion en la tecnologia.</p>
+          </div>
+        </div>
+
+        <div class="acknowledgment-item">
+          <div class="acknowledgment-image">
+            <img src="../../../assets/img/NicolasSchurmann.jpg" alt="Nicolas Schurmann">
+          </div>
+          <div class="acknowledgment-content">
+            <h4>Nicolas Schurmann - Hola mundo</h4>
+            <p>Tus videos siempre me hacian sentir que no debia quedarme comodo y salir de mi zona de confort, y que no importa que edad tenga puedo llegar lejos y seguir aprendiendo.
+            </p>
+          </div>
+        </div>
+
+        <div class="acknowledgment-item">
+          <div class="acknowledgment-image">
+            <img src="../../../assets/img/CeciliaDuran.jpg" alt="Cecilia D.">
+          </div>
+          <div class="acknowledgment-content">
+            <h4>Cecilia D.</h4>
+            <p>Creo que no existen palabras suficientes para agradecerte el apoyo que me has brindado todo este tiempo. Tu me incentivaste a estudiar e iniciar una carrera profesional,
+              todo lo que he logrado y he podido hacer es todo gracias a ti, tu fuiste el primer paso y tu fuiste el inicio de todo lo bueno que ha sucedido hasta ahora. No existen gracias
+              suficientes para demostrarte lo agradecido que me siento.
+            </p>
           </div>
         </div>
       </div>
