Carga de nuevos proyectos.

--- a/portfolio2024/src/app/components/footer/footer.component.html
+++ b/portfolio2024/src/app/components/footer/footer.component.html
@@ -67,7 +67,7 @@
       <div class="modal-body">
         <div class="acknowledgment-item">
           <div class="acknowledgment-image">
-            <img src="../../../assets/img/SebastianContreras.jpg" alt="Sebastian Contreras">
+            <img src="assets/img/SebastianContreras.jpg" alt="Sebastian Contreras">
           </div>
           <div class="acknowledgment-content">
             <h4>Profesor Sebastian Contreras</h4>
@@ -79,7 +79,7 @@
 
         <div class="acknowledgment-item">
           <div class="acknowledgment-image">
-            <img src="../../../assets/img/PatricioPalma.jpg" alt="Patricio Palma">
+            <img src="assets/img/PatricioPalma.jpg" alt="Patricio Palma">
           </div>
           <div class="acknowledgment-content">
             <h4>Profesor Patricio Palma</h4>
@@ -89,7 +89,7 @@
 
         <div class="acknowledgment-item">
           <div class="acknowledgment-image">
-            <img src="../../../assets/img/FelipeRobinet.jpg" alt="Felipe Robinet">
+            <img src="assets/img/FelipeRobinet.jpg" alt="Felipe Robinet">
           </div>
           <div class="acknowledgment-content">
             <h4>Profesor Felipe Robinet</h4>
@@ -101,7 +101,7 @@
 
         <div class="acknowledgment-item">
           <div class="acknowledgment-image">
-            <img src="../../../assets/img/AlejandroTaboada.jpg" alt="Alejandro Taboada">
+            <img src="assets/img/AlejandroTaboada.jpg" alt="Alejandro Taboada">
           </div>
           <div class="acknowledgment-content">
             <h4>Alejandro Taboada -Programacion ATS</h4>
@@ -111,7 +111,7 @@
 
         <div class="acknowledgment-item">
           <div class="acknowledgment-image">
-            <img src="../../../assets/img/NicolasSchurmann.jpg" alt="Nicolas Schurmann">
+            <img src="assets/img/NicolasSchurmann.jpg" alt="Nicolas Schurmann">
           </div>
           <div class="acknowledgment-content">
             <h4>Nicolas Schurmann - Hola mundo</h4>
@@ -122,7 +122,7 @@
 
         <div class="acknowledgment-item">
           <div class="acknowledgment-image">
-            <img src="../../../assets/img/CeciliaDuran.jpg" alt="Cecilia D.">
+            <img src="assets/img/CeciliaDuran.jpg" alt="Cecilia D.">
           </div>
           <div class="acknowledgment-content">
             <h4>Cecilia D.</h4>
